--- a/Resources/views/default/novaLotacao.html.twig
+++ b/Resources/views/default/novaLotacao.html.twig
@@ -1,4 +1,6 @@
+{% trans_default_domain 'NovosgaUsersBundle' %}
 
-{{ form_row(form.unidade) }}
-
-{{ form_row(form.perfil) }}
+{{ form_start(form) }}
+    {{ form_row(form.unidade) }}
+    {{ form_row(form.perfil) }}
+{{ form_end(form) }}
