--- a/Resources/views/default/index.html.twig
+++ b/Resources/views/default/index.html.twig
@@ -16,7 +16,7 @@
         <div class="col-md-6 col-lg-4 text-right">
             <form class="form-inline">
                 <div class="input-group">
-                    <input type="text" class="form-control" name="q" placeholder="{% trans %}Buscar{% endtrans %}" value="{{ app.request.get('q') }}">
+                    <input type="text" class="form-control" name="q" placeholder="{{ 'label.search'|trans }}" value="{{ app.request.get('q') }}">
                     <span class="input-group-btn">
                         <button type="submit" class="btn btn-secondary">
                             <i class="fa fa-search"></i>
@@ -25,7 +25,7 @@
                 </div>
                 <a href="{{ path('novosga_users_new') }}" class="btn btn-primary ml-auto">
                     <i class="fa fa-plus"></i>
-                    {% trans %}Novo usuário{% endtrans %}
+                    {{ 'button.new_user'|trans }}
                 </a>
             </form>
         </div>
@@ -36,9 +36,9 @@
     <table class="table table-bordered">
         <thead class="thead-light">
             <th>#</th>
-            <th>{% trans %}Nome de usuário{% endtrans %}</th>
-            <th>{% trans %}Nome{% endtrans %}</th>
-            <th>{% trans %}Situação{% endtrans %}</th>
+            <th>{{ 'label.username'|trans }}</th>
+            <th>{{ 'label.name'|trans }}</th>
+            <th>{{ 'label.status'|trans }}</th>
             <th></th>
         </thead>
         <tbody>
@@ -49,9 +49,9 @@
                     <td>{{ usuario.nome }} {{ usuario.sobrenome }}</td>
                     <td>
                         {% if usuario.ativo %}
-                            {% trans %}Ativo{% endtrans %}
+                            <span class="text-success">{{ 'label.enabled'|trans }}</span>
                         {% else %}
-                            {% trans %}Inativo{% endtrans %}
+                            <span class="text-danger">{{ 'label.disabled'|trans }}</span>
                         {% endif %}
                     </td>
                     <td class="text-right">
